--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,8 @@ a {
 /* Header */
 .main-header {
   background-color: #fff;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  border-bottom: 1px solid rgba(128, 128, 128, 0.1);
+  position: relative;
 }
 
 .header-container {
@@ -97,4 +98,72 @@ a {
 }
 .search-btn:hover {
   opacity: 0.4;
+}
+
+/* Dropdown */
+
+.dropdown {
+}
+.dropdown:hover .dropdown__item {
+  display: flex;
+}
+
+.dropdown__item {
+  width: 100%;
+  display: none;
+  align-items: flex-start;
+  position: absolute;
+  left: 0;
+  top: 83px;
+  padding: 32px 80px;
+  background-color: #fff;
+  border-top: 1px solid rgba(128, 128, 128, 0.1);
+  border-bottom: 1px solid rgba(128, 128, 128, 0.1);
+  box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.1);
+  z-index: 2;
+}
+
+.dropdown__nav1 {
+  display: flex;
+}
+
+.nav1__item {
+  width: 160px;
+  margin-right: 60px;
+}
+
+.nav1__item img {
+  border-radius: 8px;
+}
+
+.nav1__item h4 {
+  margin: 13px 0px;
+  font-weight: 700;
+}
+
+.nav1__item p {
+  font-size: 13px;
+  line-height: 1.4;
+  color: rgb(94, 94, 94);
+  transition: color 0.1s linear;
+}
+.nav1__item:hover p {
+  color: #000;
+}
+
+.dropdown__nav2 {
+  margin-right: 140px;
+}
+
+.nav2__item {
+  margin-bottom: 23px;
+  font-size: 15px;
+  font-weight: 500;
+  transition: opacity 0.1s linear;
+}
+.nav2__item:last-child {
+  margin-bottom: 0px;
+}
+.nav2__item:hover {
+  opacity: 0.8;
 }
