--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ a {
   background-color: #ea4c89;
   border: none;
   color: #fff;
+  transition: opacity 0.1s linear;
 }
 .btn-alt:hover {
   opacity: 0.7;
