--- a/css/style.css
+++ b/css/style.css
@@ -236,7 +236,7 @@ a {
 }
 
 .main-container {
-  margin: 32px 72px;
+  margin: 0px 72px;
   position: relative;
 }
 
@@ -246,6 +246,11 @@ a {
   justify-content: space-between;
   align-items: center;
   color: rgb(110, 110, 110);
+  background-color: #fff;
+  padding: 32px 0px;
+  position: relative;
+  /* position needed for z-index */
+  z-index: 2;
 }
 
 .main__nav--dropdown {
@@ -287,6 +292,7 @@ a {
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 5px;
   box-shadow: 0px 3px 10px rgba(110, 110, 110, 0.1);
+  z-index: 2;
 }
 .nav__dropdown--list.show {
   display: block;
@@ -342,23 +348,38 @@ a {
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 7px;
   font-size: 15px;
-  transition: border-color 0.1s linear;
+  transition: all 0.1s linear;
+  cursor: pointer;
 }
 .main__nav--filters-btn:hover {
   border-color: rgba(0, 0, 0, 0.2);
 }
+.main__nav--filters-btn:focus {
+  outline: none;
+}
+.main__nav--filters-btn.show {
+  border-color: transparent;
+  background-color: #f3f4f4;
+}
 
 .filter__dropdown {
   width: 100%;
-  position: absolute;
-  top: 75px;
-  left: 0;
   display: flex;
   justify-content: space-between;
+  transform: translateY(-80px);
+  transition: transform 0.1s linear;
+}
+.show {
+  transform: translateY(0);
 }
 
 .filter__dropdown-item {
   width: 100%;
+  max-width: 325px;
+  margin-right: 5px;
+}
+.filter__dropdown-item:last-child {
+  margin-right: 0;
 }
 
 .filter__dropdown-item h5 {
@@ -380,10 +401,47 @@ a {
 
 .filter__input input {
   width: 100%;
-  max-width: 325px;
   padding: 12px 20px;
   padding-left: 40px;
   background-color: #f5f5f5;
   border: none;
   border-radius: 8px;
+  transition: box-shadow 0.1s linear;
+}
+
+.filter__input input:hover,
+.filter__input input:focus {
+  background-color: #fff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 0 4px rgba(234, 76, 137, 0.1);
+  outline: none;
+}
+
+.filter-btn {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 15px;
+  background-color: #fff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 7px;
+  font-size: 15px;
+  color: rgb(110, 110, 110);
+  transition: color 0.1s linear;
+  cursor: pointer;
+}
+.filter-btn i {
+  transition: transform 0.15s linear;
+}
+.filter-btn.on i {
+  transform: rotate(180deg);
+}
+
+.filter-btn:hover {
+  color: #000;
+  box-shadow: 0 0 0 4px rgba(234, 76, 137, 0.1);
+}
+.filter-btn:focus {
+  outline: none;
 }
