--- a/css/style.css
+++ b/css/style.css
@@ -232,7 +232,6 @@ a {
 /* Main */
 .main-content {
   background-color: #fff;
-  height: 300vh;
 }
 
 .main-container {
@@ -366,11 +365,16 @@ a {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  transform: translateY(-80px);
-  transition: transform 0.1s linear;
+  position: relative;
+  top: -97px;
+  transition: all 0.1s linear;
+  padding-bottom: 32px;
+  margin-bottom: -97px;
+  /* To pull the content under dropdown up when dropdown moves up */
 }
-.show {
-  transform: translateY(0);
+.filter__dropdown.show {
+  top: 0;
+  margin-bottom: 0;
 }
 
 .filter__dropdown-item {
@@ -404,7 +408,7 @@ a {
   padding: 12px 20px;
   padding-left: 40px;
   background-color: #f5f5f5;
-  border: none;
+  border: 1px solid transparent;
   border-radius: 8px;
   transition: box-shadow 0.1s linear;
 }
@@ -444,4 +448,102 @@ a {
 }
 .filter-btn:focus {
   outline: none;
+}
+
+/* Main Content - Grid */
+
+.main__design-grid {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 35px;
+}
+
+.main__design {
+  width: 100%;
+}
+
+.image-wrapper {
+  position: relative;
+  width: auto;
+  height: auto;
+}
+.image-wrapper::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 99%;
+  /* Don't know why but 100% height makes it a little bigger than image */
+  border-radius: 6px;
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 0.1) 60%,
+    rgba(0, 0, 0, 0.2) 70%,
+    rgba(0, 0, 0, 0.3) 100%
+  );
+  opacity: 0;
+  transition: opacity 0.2s linear;
+}
+.image-wrapper:hover::before {
+  opacity: 1;
+}
+
+.design-image {
+  width: 100%;
+  border-radius: 6px;
+}
+
+.design-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 5px;
+}
+
+.design__user {
+  display: flex;
+  align-items: center;
+}
+.design__user-img {
+  width: 25px;
+  border-radius: 50%;
+  margin-right: 5px;
+}
+
+.design__user-name {
+  font-weight: 500;
+}
+.title__state {
+  padding: 1px 2px;
+  background-color: #cccccc;
+  border-radius: 3px;
+  color: #fff;
+  font-size: 11px;
+  font-weight: 700;
+  text-transform: uppercase;
+  transition: background-color 0.1s linear;
+}
+
+.design__icons {
+  color: #9e9ea7;
+  font-size: 13px;
+}
+.design__comment {
+  margin-right: 5px;
+}
+
+.design__comment i {
+  transition: color 0.1s linear;
+}
+.design__heart i {
+  transition: color 0.1s linear;
+}
+
+.title__state:hover {
+  background-color: #ea4c89;
+}
+.design__comment i:hover,
+.design__heart i:hover {
+  color: #ea4c89;
 }
