--- a/css/style.css
+++ b/css/style.css
@@ -627,7 +627,12 @@ a {
 }
 
 .footer__container {
-  padding: 70px 185px 0px 185px;
+  /* padding: 70px 185px 0px 185px; */
+  padding-top: 70px;
+  margin: 0px auto;
+  max-width: 1680px;
+  padding-left: 72px;
+  padding-right: 72px;
 }
 
 .footer__top {
