File reorganized, mobile header half done

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
+@import url("header.css");
+@import url("visual.css");
+@import url("main.css");
+@import url("footer.css");
 
 /* Global */
 * {
@@ -38,726 +42,81 @@ a {
   opacity: 0.7;
 }
 
-/* Header */
-.main-header {
-  background-color: #fff;
-  border-bottom: 1px solid rgba(128, 128, 128, 0.1);
-  position: relative;
-}
-
-.header-container {
-  display: flex;
-  padding: 0px 30px;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.header-left,
-.header-right,
-.header__nav-list,
-.header__btns {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.main-logo {
-  margin-right: 20px;
-  transition: opacity 0.2s linear;
-}
-.main-logo:hover {
-  opacity: 0.7;
-}
-
-.header__nav-list {
-}
-.header__nav-list li {
-}
-
-.header__nav-item {
-  display: flex;
-  align-items: center;
-  margin-right: 20px;
-  font-weight: 500;
-  opacity: 0.8;
-  transition: opacity 0.2s linear;
-  height: 83px;
-}
-.header__nav-item:hover {
-  opacity: 1;
-}
-
-#seperator {
-  margin-right: 20px;
-  font-weight: 300;
-  opacity: 0.4;
-}
-
-.search-btn {
-  opacity: 0.5;
-  margin-right: 8px;
-}
-.search-btn:hover {
-  opacity: 0.4;
-}
-
-/* Dropdown */
-
-.dropdown {
-}
-.dropdown:hover .dropdown__item {
-  display: flex;
-}
-
-.dropdown__item {
-  width: 100%;
-  display: none;
-  align-items: flex-start;
-  position: absolute;
-  left: 0;
-  top: 83px;
-  padding: 32px 80px;
-  background-color: #fff;
-  border-top: 1px solid rgba(128, 128, 128, 0.1);
-  border-bottom: 1px solid rgba(128, 128, 128, 0.1);
-  box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.1);
-  z-index: 2;
-}
-
-.dropdown__nav1 {
-  display: flex;
-}
-
-.nav1__item {
-  width: 165px;
-  margin-right: 50px;
-}
-
-.nav1__item img {
-  border-radius: 8px;
-}
-
-.nav1__item h4 {
-  margin: 13px 0px;
-  font-weight: 700;
-}
-
-.nav1__item p {
-  font-size: 13px;
-  line-height: 1.4;
-  color: rgb(94, 94, 94);
-  transition: color 0.1s linear;
-}
-.nav1__item:hover p {
-  color: #000;
-}
-
-.dropdown__nav2 {
-  margin-right: 140px;
-}
-
-.nav2__item {
-  margin-bottom: 23px;
-  font-size: 15px;
-  font-weight: 500;
-  transition: opacity 0.1s linear;
-}
-.nav2__item:last-child {
-  margin-bottom: 0px;
-}
-.nav2__item:hover {
-  opacity: 0.8;
-}
-
-#pro {
-  text-transform: uppercase;
-  font-size: 11px;
-  background-color: rgba(0, 0, 0, 0.2);
-  color: #fff;
-  margin-left: 5px;
-  padding: 1px;
-  border-radius: 2px;
-}
-
-/* Visual */
-.visual {
-  background-color: #f9f8fd;
-}
-
-.visual-container {
-  padding: 38px 210px;
-  padding-left: 284px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.visual__content {
-  color: #333333;
-  max-width: 595px;
-}
-.visual__content h2 {
-  font-size: 50px;
-  font-weight: 700;
-  line-height: 1.1;
-  margin-bottom: 20px;
-}
-
-.visual__content p {
-  line-height: 1.5;
-  margin-bottom: 15px;
-}
-
-.visual__img {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-}
-
-.visual__img img {
-  width: 490px;
-  height: 360px;
-  margin-bottom: 25px;
-}
-
-.visual__img span {
-  color: #9e9ea7;
-  font-size: 15px;
-}
-.visual__img a {
-  color: #9e9ea7;
-  text-decoration: underline;
-}
-
-/* Main */
-.main-content {
-  background-color: #fff;
-  position: relative;
-}
-
-.main-container {
-  margin: 0px 72px;
-  position: relative;
-}
-
-/* Main Nav*/
-.main__nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  color: rgb(110, 110, 110);
-  background-color: #fff;
-  padding: 32px 0px;
-  position: relative;
-  /* position needed for z-index */
-  z-index: 2;
-}
-
-.main__nav--dropdown {
-  position: relative;
-}
-
-.main__nav-btn {
-  padding: 10px 15px;
-  background-color: #fff;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: 7px;
-  font-size: 15px;
-  color: rgb(110, 110, 110);
-  transition: color 0.1s linear;
-  cursor: pointer;
-}
-.main__nav-btn i {
-  transition: transform 0.15s linear;
-}
-.main__nav-btn.show i {
-  transform: rotate(180deg);
-}
-
-.main__nav-btn:hover {
-  color: #000;
-  box-shadow: 0 0 0 4px rgba(234, 76, 137, 0.1);
-}
-.main__nav-btn:focus {
-  outline: none;
-}
-
-.nav__dropdown--list {
-  display: none;
-  width: 180px;
-  position: absolute;
-  top: 50px;
-  padding: 5px 0px;
-  background-color: #fff;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: 5px;
-  box-shadow: 0px 3px 10px rgba(110, 110, 110, 0.1);
-  z-index: 2;
-}
-.nav__dropdown--list.show {
-  display: block;
-}
-.nav__dropdown--item:nth-child(2) {
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-}
-
-.nav__dropdown--list a {
-  display: block;
-  padding: 14px;
-  font-size: 13px;
-  color: rgb(110, 110, 110);
-}
-.nav__dropdown--list a:hover {
-  background-color: #f5f5f5;
-}
-
-.nav__dropdown--list .current-item {
-  color: #ea4c89;
-  font-weight: 500;
-}
-
-.main__nav--list {
-  display: flex;
-  font-size: 15px;
-}
-
-.main__nav--item {
-  margin-right: 5px;
-}
-.main__nav--item a {
-  padding: 12px;
-  color: rgb(110, 110, 110);
-  transition: color 0.1s linear;
-}
-.item-selected a {
-  background-color: #f5f5f5;
-  border-radius: 10px;
-  color: #000;
-  font-weight: 500;
-}
-.main__nav--item a:hover {
-  color: #000;
-}
-
-.main__nav--filters {
-  /* position: relative; */
-}
-.main__nav--filters-btn {
-  padding: 10px 15px;
-  background-color: #fff;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: 7px;
-  font-size: 15px;
-  transition: all 0.1s linear;
-  cursor: pointer;
-}
-.main__nav--filters-btn:hover {
-  border-color: rgba(0, 0, 0, 0.2);
-}
-.main__nav--filters-btn:focus {
-  outline: none;
-}
-.main__nav--filters-btn.show {
-  border-color: transparent;
-  background-color: #f3f4f4;
-}
-
-.filter__dropdown {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  position: relative;
-  top: -97px;
-  transition: all 0.1s linear;
-  padding-bottom: 32px;
-  margin-bottom: -97px;
-  /* To pull the content under dropdown up when dropdown moves up */
-}
-.filter__dropdown.show {
-  top: 0;
-  margin-bottom: 0;
-}
-
-.filter__dropdown-item {
-  width: 100%;
-  max-width: 325px;
-  margin-right: 5px;
-}
-.filter__dropdown-item:last-child {
-  margin-right: 0;
-}
-
-.filter__dropdown-item h5 {
-  color: #000;
-  font-weight: 500;
-  margin-bottom: 10px;
-}
-
-.filter__input {
-  position: relative;
-}
-
-.filter__input i {
-  position: absolute;
-  top: 10px;
-  left: 15px;
-  color: rgba(0, 0, 0, 0.3);
-}
-
-.filter__input input {
-  width: 100%;
-  padding: 12px 20px;
-  padding-left: 40px;
-  background-color: #f5f5f5;
-  border: 1px solid transparent;
-  border-radius: 8px;
-  transition: box-shadow 0.1s linear;
-}
-
-.filter__input input:hover,
-.filter__input input:focus {
-  background-color: #fff;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  box-shadow: 0 0 0 4px rgba(234, 76, 137, 0.1);
-  outline: none;
-}
-
-.filter-btn {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 10px 15px;
-  background-color: #fff;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: 7px;
-  font-size: 15px;
-  color: rgb(110, 110, 110);
-  transition: color 0.1s linear;
-  cursor: pointer;
-}
-.filter-btn i {
-  transition: transform 0.15s linear;
-}
-.filter-btn.on i {
-  transform: rotate(180deg);
-}
-
-.filter-btn:hover {
-  color: #000;
-  box-shadow: 0 0 0 4px rgba(234, 76, 137, 0.1);
-}
-.filter-btn:focus {
-  outline: none;
-}
-
-/* Main Content - Grid */
-
-.main__design-grid {
-  width: 100%;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 35px;
-  margin-bottom: 50px;
-}
-
-.main__design {
-  width: 100%;
-}
-
-.image-wrapper {
-  position: relative;
-  width: auto;
-  height: auto;
-}
-.image-wrapper::before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 99%;
-  /* Don't know why but 100% height makes it a little bigger than image */
-  border-radius: 6px;
-  background: linear-gradient(
-    to bottom,
-    rgba(0, 0, 0, 0) 0%,
-    rgba(0, 0, 0, 0.1) 60%,
-    rgba(0, 0, 0, 0.2) 70%,
-    rgba(0, 0, 0, 0.3) 100%
-  );
-  opacity: 0;
-  transition: opacity 0.2s linear;
-}
-.image-wrapper:hover::before {
-  opacity: 1;
-}
-
-.design-image {
-  width: 100%;
-  border-radius: 6px;
-}
-
-.hover-items {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0px 20px;
-  color: #fff;
-  position: absolute;
-  bottom: 20px;
-  font-size: 20px;
-  opacity: 0;
-  visibility: hidden;
-  transition: all 0.1s linear;
-}
-.image-wrapper:hover .hover-items {
-  opacity: 1;
-  visibility: visible;
-}
-.hover-items h5 {
-  font-weight: 500;
-}
-.hover__icons {
-  color: #333;
-}
-.hover__icons i {
-  background-color: rgb(230, 230, 230);
-  padding: 7px;
-  border-radius: 5px;
-  cursor: pointer;
-}
-.hover__icons i:first-child {
-  margin-right: 5px;
-}
-
-.design-title {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 5px;
-}
-
-.design__user {
-  display: flex;
-  align-items: center;
-}
-.design__user-img {
-  width: 25px;
-  border-radius: 50%;
-  margin-right: 5px;
-}
-
-.design__user-name {
-  font-weight: 500;
-}
-.title__state {
-  padding: 1px 2px;
-  background-color: #cccccc;
-  border-radius: 3px;
-  color: #fff;
-  font-size: 11px;
-  font-weight: 700;
-  text-transform: uppercase;
-  transition: background-color 0.1s linear;
-}
-
-.design__icons {
-  color: #9e9ea7;
-  font-size: 13px;
-}
-.design__comment {
-  margin-right: 5px;
-}
-
-.design__comment i {
-  transition: color 0.1s linear;
-}
-.design__heart i {
-  transition: color 0.1s linear;
-}
-
-.title__state:hover {
-  background-color: #ea4c89;
-}
-.design__comment i:hover,
-.design__heart i:hover {
-  color: #ea4c89;
-}
-
-/* Main Sign in up btn */
-.main__sign {
-  display: flex;
-  justify-content: center;
-  padding-bottom: 50px;
-}
-
-.main__sign button {
-  width: 250px;
-}
-.main__sign button:last-child {
-  color: #ea4c89;
-  transition: all 0.1s linear;
-}
-.main__sign button:last-child:hover {
-  opacity: 0.7;
-}
-
-/* Page-up */
-#page-up {
-  display: block;
-  position: fixed;
-  opacity: 0.5;
-  visibility: hidden;
-  bottom: 20px;
-  right: 20px;
-  cursor: pointer;
-  transition: all 0.1s linear;
-}
-#page-up.fix {
-  position: absolute;
-}
-
-#page-up:hover {
-  opacity: 1;
-}
-
-/* Footer */
-.footer {
-  background-color: #fafafb;
-}
-
-.footer__container {
-  /* padding: 70px 185px 0px 185px; */
-  padding-top: 70px;
-  margin: 0px auto;
-  max-width: 1680px;
-  padding-left: 72px;
-  padding-right: 72px;
-}
-
-.footer__top {
-  display: flex;
-  justify-content: space-between;
-  padding-bottom: 60px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-}
-
-.footer__column {
-  width: 100%;
-  max-width: 300px;
-  margin: 0px 10px;
-}
-.footer__column:first-child {
-  margin-right: 60px;
-}
-
-.footer__dribble-icon {
-  fill: #ea4c89;
-  width: 104px;
-  margin-bottom: 20px;
-  transition: fill 0.1s linear;
-}
-.footer__dribble-icon:hover {
-  fill: #c03f70;
-}
-
-.footer__description {
-  font-size: 15px;
-  max-width: 160px;
-  line-height: 1.4;
-  margin-bottom: 20px;
-}
-
-.footer__icons {
-  display: flex;
-  max-width: 160px;
-  justify-content: space-between;
-  font-size: 19px;
-}
-.icon a {
-  transition: color 0.1s linear;
-}
-.icon a:hover {
-  color: #000;
-}
-
-.list--title {
-  font-size: 15px;
-  font-weight: 500;
-  margin: 10px 0px;
-}
-
-.footer__list {
-  line-height: 2.5;
-  font-size: 15px;
-}
-
-.footer__list-item a {
-  transition: color 0.1s linear;
-}
-.footer__list-item a:hover {
-  color: #000;
-}
-
-.footer__column:last-child {
-  display: flex;
-  width: 500px;
-  max-width: 500px;
-}
-
-.footer__market-logo {
-  max-width: 130px;
-  max-height: 100px;
-  object-fit: contain;
-  align-items: flex-start;
-}
-
-.description__wrapper {
-  width: 150px;
-  line-height: 1.5;
-}
-
-.market-description {
-  /* width: 100%; */
-  font-size: 14px;
-  /* max-width: 150px; */
-  color: rgba(0, 0, 0, 0.7);
-  transition: color 0.1s linear;
-}
-.footer__ad {
-  /* max-width: 100px; */
-  text-transform: uppercase;
-  font-size: 14px;
-  font-weight: 700;
-  color: rgba(0, 0, 0, 0.3);
-  transition: color 0.1s linear;
-}
-
-.market-description:hover {
-  color: rgba(0, 0, 0, 0.9);
-}
-.footer__ad:hover {
-  color: rgba(0, 0, 0, 0.5);
-}
-
-.footer__bottom {
-  color: rgba(0, 0, 0, 0.7);
-  font-size: 15px;
-  padding: 40px 0px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.footer__shots {
-  display: flex;
-  align-items: center;
-}
-
-.footer__shots-bold {
-  font-weight: 700;
-}
-
-.footer__shots i {
-  color: #ea4c89;
+@media (max-width: 1200px) {
+  /* header */
+  #seperator {
+    display: none;
+  }
+}
+
+@media (max-width: 920px) {
+  .header__container {
+    padding: 0px 24px;
+  }
+
+  .header-left,
+  .header-right {
+    display: none;
+  }
+
+  .mobile-header {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .mobile-header__dropBtn {
+    color: rgba(0, 0, 0, 0.5);
+    cursor: pointer;
+  }
+
+  .mobile-header__dropBtn i:last-child {
+    display: none;
+  }
+  .mobile-header__dropBtn.mdrop i:last-child {
+    display: inline;
+  }
+  .mobile-header__dropBtn.mdrop i:first-child {
+    display: none;
+  }
+
+  .mobile-header__dropdown {
+    display: none;
+    width: 100%;
+    padding: 0px 24px;
+    padding-bottom: 10px;
+    background-color: #fff;
+    position: absolute;
+    top: 60px;
+    left: 0;
+  }
+  .mobile-header__dropdown.mdrop {
+    display: block;
+  }
+  .mobile-header__dropdown-item {
+    font-size: 20px;
+    color: rgb(110, 109, 122);
+    font-weight: 500;
+    cursor: pointer;
+  }
+  .item__wrapper {
+    display: flex;
+    justify-content: space-between;
+    padding: 15px 0px;
+  }
+
+  .mobile-header__dropdown-item .filter__input {
+    margin-bottom: 10px;
+  }
+
+  .main-logo {
+    margin-right: 0px;
+    height: 60px;
+  }
+
+  .mobile-header .btn {
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
 }
