--- a/css/style.css
+++ b/css/style.css
@@ -42,14 +42,42 @@ a {
   opacity: 0.7;
 }
 
+@media (max-width: 1600px) {
+  .visual-container {
+    padding-left: 72px;
+    padding-right: 72px;
+  }
+}
+
 @media (max-width: 1200px) {
   /* header */
   #seperator {
     display: none;
   }
+  /* Visual */
+
+  .visual-container {
+    padding: 90px 32px;
+  }
+
+  .visual__content h2 {
+    font-size: 35px;
+  }
+
+  .visual__img img {
+    max-width: 350px;
+  }
+}
+
+@media (min-width: 921px) {
+  /* Header */
+  .mobile-header {
+    display: none;
+  }
 }
 
 @media (max-width: 920px) {
+  /* Header */
   .header__container {
     padding: 0px 24px;
   }
@@ -100,10 +128,34 @@ a {
     font-weight: 500;
     cursor: pointer;
   }
+
   .item__wrapper {
     display: flex;
     justify-content: space-between;
     padding: 15px 0px;
+  }
+
+  .item__wrapper {
+    transition: transform 0.1s linear;
+  }
+
+  .item__wrapper.dropped i {
+    transform: rotate(180deg);
+  }
+
+  .mobile-header__dropdrop {
+    display: none;
+    font-size: 18px;
+    font-weight: 400;
+    padding-left: 20px;
+    border-left: 1px solid rgba(0, 0, 0, 0.1);
+  }
+  .mobile-header__dropdrop.dropped {
+    display: block;
+  }
+  .mobile-header__dropdrop li {
+    cursor: pointer;
+    padding: 10px 0px;
   }
 
   .mobile-header__dropdown-item .filter__input {
@@ -118,5 +170,31 @@ a {
   .mobile-header .btn {
     padding-top: 0px;
     padding-bottom: 0px;
+  }
+}
+
+@media (max-width: 768px) {
+  /* visual */
+  .visual-container {
+    flex-direction: column-reverse;
+    padding: 40px 20px;
+  }
+
+  .visual__content {
+    text-align: center;
+  }
+
+  .visual__content h2 {
+    font-size: 25px;
+  }
+
+  .visual__img {
+    align-items: center;
+    margin-bottom: 25px;
+  }
+
+  .visual__img img {
+    width: 100%;
+    max-width: 410px;
   }
 }
