--- a/css/visual.css
+++ b/css/visual.css
@@ -34,8 +34,9 @@
 }
 
 .visual__img img {
-  width: 490px;
-  height: 360px;
+  /* width: 490px;
+  height: 360px; */
+  max-width: 490px;
   margin-bottom: 25px;
 }
 
