--- a/css/main.css
+++ b/css/main.css
@@ -173,22 +173,27 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
-  position: relative;
-  top: -97px;
+  /* position: relative; */
+  /* top: -97px; */
   transition: all 0.1s linear;
-  padding-bottom: 32px;
-  margin-bottom: -97px;
+  /* padding-bottom: 32px; */
+  /* margin-bottom: -97px; */
   /* To pull the content under dropdown up when dropdown moves up */
+  max-height: 0;
+  overflow: hidden;
 }
 .filter__dropdown.show {
-  top: 0;
-  margin-bottom: 0;
+  /* top: 0;
+  margin-bottom: 0; */
+  height: auto;
+  max-height: 99px;
 }
 
 .filter__dropdown-item {
   width: 100%;
   max-width: 325px;
-  margin-right: 5px;
+  margin-right: 35px;
+  margin-bottom: 32px;
 }
 .filter__dropdown-item:last-child {
   margin-right: 0;
@@ -420,6 +425,7 @@
   right: 20px;
   cursor: pointer;
   transition: all 0.1s linear;
+  z-index: 999;
 }
 #page-up.fix {
   position: absolute;
